tests/ui/traits/negative-impls/feature-gate-negative_impls.stderr
error[E0658]: negative trait bounds are not fully implemented; use marker types for now
  --> $DIR/feature-gate-negative_impls.rs:2:6
   |
LL | impl !MyTrait for u32 {}
   |      ^^^^^^^^
   |
   = note: see issue #68318 <https://github.com/rust-lang/rust/issues/68318> for more information
   = help: add `#![feature(negative_impls)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
